--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "next": "^7.0.2",
+    "next-offline": "^3.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-player": "^1.7.0"
