--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.6.0",
     "next": "^7.0.2",
     "next-offline": "^3.1.0",
     "react": "^16.6.3",
